# python-project-template

./: .gitattributes  .pylintrc  LICENSE.txt  README.md  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: python-app.yml
src/: main.py
src/moduleName/: __init__.py  myModule.py
tests/test_moduleName/: test_myModyle.py
utils/: activateEnv.ps1  createEnv.ps1  deactivate.ps1  deleteEnv.ps1  installDependencies.ps1  updateDependencies.ps1  updatePip.ps1
