[metadata]
name = python-project-template
version = 0.0.1
author = Richard Zampieri
author_email = youremail@email.com
description = A template for Python projects
url = 
keywords = sample, template, boilerplate


[options]
packages = find:
python_requires = >=3.8
install_requires =  # definition of default package to be installed

[option.extra_require]
test = 
    pytest
    pytest-cov # coverage

[options.packages.find]
exclude = 
    tests*
    docs*

[options.entry_points]
console_scripts = 
    myproject = python-project-template.__main__:main

